--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -1,11 +1,10 @@
-FROM debian:latest
+FROM debian:bookworm
 
-RUN apt update && apt upgrade -y && apt install -y \
-    mysql-server-core
-    
+RUN apt update && apt upgrade -y; apt install -y mariadb-server
+
 COPY 50-server.cnf /etc/mysql/mariadb.conf.d/.
 COPY init.sql /etc/mysql/init.sql
 
 RUN mkdir /run/mysqld
 
-CMD ["mysqld]
+CMD ["mysqld"]
