--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -1,12 +1,11 @@
-FROM debian:bookworm
-
+FROM debian:bullseye
 # Install necessary packages for Nginx and OpenSSL
 RUN apt update && apt upgrade -y && apt install -y nginx openssl
 
 # Create SSL certificate and key (self-signed for simplicity)
 RUN mkdir -p /etc/nginx/ssl && \
     openssl genpkey -algorithm RSA -out /etc/nginx/ssl/certificate.key && \
-    openssl req -new -key /etc/nginx/ssl/certificate.key -out /etc/nginx/ssl/certificate.csr -subj "/C=US/ST=State/L=City/O=Organization/CN=yourdomain.com" && \
+    openssl req -new -key /etc/nginx/ssl/certificate.key -out /etc/nginx/ssl/certificate.csr -subj "/C=US/ST=State/L=City/O=Organization/CN=dkremer.42.fr" && \
     openssl x509 -req -in /etc/nginx/ssl/certificate.csr -signkey /etc/nginx/ssl/certificate.key -out /etc/nginx/ssl/certificate.crt && \
     rm /etc/nginx/ssl/certificate.csr  # Clean up the CSR
 
